# onnxruntime-ep-tensorrt

./: .clang-format  .gitignore  .lintrunner.toml  CMakeLists.txt  README.md  pyproject.toml
.github/data/: test_configuration.json
.github/docker/: Dockerfile.ubuntu_2404_cuda
.github/scripts/: test_runner.py  test_runner_grouped.py  test_runner_individual.py
.github/workflows/: lint.yml  linux_x64_cuda.yml  main.yml  windows_x64.yml  windows_x64_cuda.yml
cmake/: ORTTensorRTEpConfig.cmake.in  ORTTensorRTEpConfigVersion.cmake.in  onnxruntime_ep_tensorrt_config.cmake.in  onnxruntime_ep_tensorrt_config_version.cmake.in  onnxruntime_library_utils.cmake
csharp/: .gitignore  nuget.config  readme.md  setup.bat
csharp/Microsoft.ML.OnnxRuntime.EP.TensorRT/: Microsoft.ML.OnnxRuntime.EP.TensorRT.csproj  Microsoft.ML.OnnxRuntime.EP.TensorRT.sln  TensorRTEp.cs  readme.md
csharp/SampleApp/: Program.cs  SampleApp.csproj  SampleApp.sln  mul.onnx
python/: .gitignore  readme.md  setup.py
python/example_usage/: example_usage.py
python/onnxruntime_ep_tensorrt/: __init__.py
src/: cuda_graph.cc  cuda_graph.h  nv_includes.h  onnx_ctx_model_helper.cc  onnx_ctx_model_helper.h  tensorrt_execution_provider.cc  tensorrt_execution_provider.def  tensorrt_execution_provider.h  tensorrt_execution_provider_custom_ops.cc  tensorrt_execution_provider_custom_ops.h  tensorrt_execution_provider_data_transfer.cc  tensorrt_execution_provider_data_transfer.h  tensorrt_execution_provider_info.cc  tensorrt_execution_provider_info.h  tensorrt_execution_provider_kernel_registration.cc  tensorrt_execution_provider_kernel_registration.h  tensorrt_execution_provider_stream_support.cc  tensorrt_execution_provider_stream_support.h  tensorrt_execution_provider_utils.h  tensorrt_provider_factory.cc  tensorrt_provider_factory.h
src/kernels/: memcpy.cc  memcpy.h  utils.h
src/utils/: ep_utils.h  ort_graph_to_proto.h
tests/: cuda_graph_test.cc  tensorrt_basic_test.cc
tests/testdata/: trt_plugin_custom_op_test.onnx  trt_plugin_custom_op_test.py
